--- a/css/hosting.css
+++ b/css/hosting.css
@@ -16,6 +16,44 @@
     width: 65%;
 }
 
+.hosting-cards{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 30px;
+    gap: 30px
+}
+
+.hosting-cards_card{
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 calc(33% - 30px);
+    padding-bottom: 15px;
+
+    background-color: white;
+    border-radius: 20px;
+    padding: 5px;
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+}
+
+.hosting-cards_card-img{
+    width: 100%;
+    height: 136px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.hosting-cards_card-content{
+    padding-bottom: 15px;
+    padding-left: 15px;
+}
+
+.hosting-plus{
+    margin-top: 30px;
+    font-size: 18px;
+    font-weight: 700;
+}
+
 /****** popular ***********/
 .popular {
     width: 32%;
@@ -59,4 +97,8 @@
 
 .popular-cards .card-rating {
     margin-bottom: 5px;
+}
+
+@media (max-width: 1024px){
+    
 }
