--- a/css/hosting.css
+++ b/css/hosting.css
@@ -1,12 +1,13 @@
 /****** hosting And popular ***********/
 .hosting-and-popular {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 40px;
 }
 
 /****** hosting ***********/
 .hosting {
-    width: 65%;
+    grid-column: 1/3;
     background-color: var(--main-bg-color);
     border-radius: 20px;
     padding: 30px;
@@ -14,9 +15,9 @@
 }
 
 .hosting-cards {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     margin-top: 30px;
     gap: 30px
 }
@@ -25,24 +26,27 @@
     display: flex;
     flex-direction: column;
     flex: 1 0 calc(33% - 30px);
-    padding-bottom: 15px;
-
-    background-color: white;
-    border-radius: 20px;
-    padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
 
 .hosting-cards_card-img {
-    width: 100%;
-    height: 136px;
+    border: 5px solid white;
+    height: 114px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    object-fit: cover;
+
 }
 
 .hosting-cards_card-content {
-    padding-bottom: 15px;
-    padding-left: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    padding: 4px 15px 15px 15px;
+}
+
+.card-rating {
+    line-height: 1;
+    font-size: 12px;
 }
 
 .hosting-plus {
@@ -53,7 +57,6 @@
 
 /****** popular ***********/
 .popular {
-    width: 32%;
     background-color: var(--main-bg-color);
     border-radius: 20px;
     padding: 30px;
@@ -66,38 +69,68 @@
     align-items: center;
 }
 
-.popular-cards .card {
-    display: flex;
-    margin-top: 33px;
+.popular-cards {
+    display: grid;
+    grid-template-rows: auto;
+    margin-top: 30px;
+    gap: 30px;
 }
 
-.popular-cards img {
+.popular-cards_card {
+    display: flex;
+    flex-direction: row;
+}
+
+.popular-cards_card-img {
+    flex-shrink: 0;
     width: 33%;
     height: 136px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
+    object-fit: cover;
+    border: 5px solid white;
 }
 
-.popular-cards .card-content {
-    width: 67%;
-    padding-left: 15px;
+.popular-cards_card-content {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    box-sizing: border-box;
+    padding: 15px 5px 10px 10px;
 }
 
-.popular-cards .card-title {
-    margin-top: 10px;
-    margin-bottom: 4px;
+.popular-cards_card-text {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
-.popular-cards .card-subtitle {
+/* common */
+.section-title {
+    margin: 0;
+    font-size: 22px;
+}
+
+.card {
+    border-radius: 20px;
+    background-color: white;
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+}
+
+.card-title {
+    font-size: 16px;
     margin: 0;
 }
 
-.popular-cards .card-rating {
-    margin-bottom: 5px;
+.card-subtitle {
+    font-size: 14px;
+}
+
+.euro {
+    font-weight: 700;
+}
+
+.neutral-star {
+    color: var(--main-bg-color)
 }
 
 @media (max-width: 1024px) {
