--- a/css/style.css
+++ b/css/style.css
@@ -43,34 +43,6 @@ a {
     text-decoration: none;
 }
 
-.section-title {
-    margin: 0;
-    font-size: 22px;
-}
-
-.card {
-    background-color: white;
-    border-radius: 20px;
-    padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-}
-
-.card img {
-    object-fit: cover;
-}
-
-.card-title {
-    font-size: 16px;
-}
-
-.euro {
-    font-weight: 700;
-}
-
-.neutral-star {
-    color: var(--main-bg-color)
-}
-
 /* Remove native space on p */
 p {
     margin: 0;
@@ -89,38 +61,7 @@ p {
 
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
-@media (max-width: 1024px) {
-    .hosting-and-popular {
-        flex-direction: column;
-    }
-
-    .hosting {
-        width: 100%;
-    }
-
-    .popular {
-        width: 100%;
-        margin-top: 50px;
-    }
-
-    .popular-cards {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    .popular-cards a {
-        width: 30%;
-    }
-
-    .popular-cards .card-title {
-        font-size: 14px;
-    }
-
-    .popular-cards .card-subtitle {
-        font-size: 13px;
-    }
-}
+@media (max-width: 1024px) {}
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
