--- a/css/hosting.css
+++ b/css/hosting.css
@@ -1,13 +1,12 @@
 /****** hosting And popular ***********/
 .hosting-and-popular {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 2fr 1fr;
     gap: 40px;
 }
 
 /****** hosting ***********/
 .hosting {
-    grid-column: 1/3;
     background-color: var(--main-bg-color);
     border-radius: 20px;
     padding: 30px;
@@ -134,12 +133,12 @@
 }
 
 @media (max-width: 1024px) {
-    .hosting {
-        width: 100%;
+    .hosting-and-popular {
+        grid-template-columns: 1fr;
     }
 
-    .popular {
-        width: 100%;
+    .popular-cards {
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
@@ -152,26 +151,23 @@
     }
 
     .popular-cards {
-        display: block;
+        grid-template-columns: 1fr;
+        gap: 15px;
     }
 
     .hosting {
         order: 2;
         background-color: white;
-        padding: 35px 20px;
+        padding: 0 20px;
     }
 
     .hosting-cards {
-        display: block;
-        margin-top: 15px;
-    }
-
-    .hosting-cards_card {
-        margin-bottom: 15px;
+        grid-template-columns: 1fr;
+        gap: 15px;
     }
 
     .hosting-plus {
-        margin-top: 0;
+        margin-top: 15px;
     }
 
 }
