--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,16 @@ a {
     text-decoration: none;
 }
 
-/* Remove native space on p */
+/* Remove native space on p y h1 */
+h1 {
+    margin: 0;
+    line-height: 25.83px;
+}
+
 p {
     margin: 0;
     padding: 0;
+    line-height: 18.78px;
 }
 
 .is-hidden-mobile {
