--- a/css/activity.css
+++ b/css/activity.css
@@ -1,14 +1,15 @@
+/****** Activities ***********/
 .activities {
     display: flex;
     flex-direction: column;
-    margin: 65px 30px 30px 30px
+    margin: 65px 30px;
 }
 
 .activities-cards {
     display: flex;
     flex-direction: row;
     gap: 30px;
-    margin: 30px 0;
+    margin-top: 30px;
 }
 
 .activities-cards_card {
@@ -32,7 +33,7 @@
     font-size: 16px;
     font-weight: 700;
     padding: 0 19px;
-    height: 70px;
+    height: 59px;
     display: flex;
     align-items: center;
 }
