--- a/css/search.css
+++ b/css/search.css
@@ -1,8 +1,19 @@
-.search-title {
-    font-size: 1.375rem;
-    margin: 0 0 8px 0;
+/****** Search ***********/
+.search {
+    margin-top: 30px;
 }
 
+.search-headline {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.search-title {
+    font-size: 22px;
+}
+
+/****** Search bar ***********/
 .search-bar {
     margin: 35px 0;
     display: flex;
@@ -21,16 +32,18 @@
 }
 
 .search-bar_input {
-    width: 195px;
+    width: 190px;
     font-size: 18px;
     font-weight: 700;
     text-align: center;
     border: 1px solid var(--main-bg-color);
+    padding: 0;
 }
 
 .search-bar_btn {
     background-color: var(--main-color);
     color: white;
+    font-size: 18px;
     font-weight: 700;
     padding: 14px 16px;
     border-top-right-radius: 15px;
@@ -46,6 +59,7 @@
     color: black;
 }
 
+/****** Filters ***********/
 .search-filters {
     display: flex;
     flex-direction: row;
@@ -58,6 +72,7 @@
 
 .search-filters_title {
     display: contents;
+    font-size: 18px;
     font-weight: 700;
 }
 
@@ -66,13 +81,17 @@
     opacity: 0;
 }
 
+.search-filters_label .fa-person {
+    font-size: 22px;
+}
+
 .search-filters_label {
     display: inline-flex;
     flex-direction: row;
     gap: 10px;
     justify-content: center;
     align-items: center;
-    height: 50px;
+    height: 46px;
     padding: 0 19px;
     border: 2px solid #d9d9d9;
     border-radius: 25px;
@@ -113,7 +132,6 @@
     border: 1px solid #d9d9d9;
     border-radius: 100%;
 }
-
 
 @media (max-width: 1024px) {
     .search-filters_title {
