--- a/css/footer.css
+++ b/css/footer.css
@@ -15,14 +15,12 @@
 .footer-column_list {
     margin: 0;
     padding: 0;
-
     list-style-type: none;
 }
 
 .footer-column_title {
     display: block;
     padding-bottom: 7.5px;
-
     font-weight: bold;
 }
 
@@ -35,5 +33,9 @@
         flex-direction: column;
         gap: 50px;
         padding: 30px;
+    }
+
+    .footer-column {
+        padding: 0;
     }
 }
