--- a/css/activity.css
+++ b/css/activity.css
@@ -30,12 +30,12 @@
 }
 
 .activities-cards_card-p {
-    font-size: 16px;
-    font-weight: 700;
-    padding: 0 19px;
-    height: 59px;
     display: flex;
     align-items: center;
+    padding: 20px 19px;
+    margin: auto 0;
+    font-size: 16px;
+    font-weight: 700;
 }
 
 @media (max-width: 1024px) {
