add wrap to popular img

--- a/css/hosting.css
+++ b/css/hosting.css
@@ -94,13 +94,20 @@
 }
 
 .popular-cards_card-img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+
+}
+
+.popular-cards_card-img_wrapper {
     flex-shrink: 0;
     width: 33%;
     height: 136px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
-    object-fit: cover;
     border: 5px solid white;
+    overflow: hidden;
 }
 
 .popular-cards_card-content {
@@ -154,6 +161,14 @@
     .popular-cards {
         grid-template-columns: repeat(3, 1fr);
     }
+
+    .popular-cards_card {
+        height: 100%;
+    }
+
+    .popular-cards_card-img_wrapper {
+        height: auto;
+    }
 }
 
 @media (max-width: 767.98px) {
@@ -167,6 +182,10 @@
     .popular-cards {
         grid-template-columns: 1fr;
         gap: 15px;
+    }
+
+    .popular-cards_card-img_wrapper {
+        height: 136px;
     }
 
     .hosting {
