--- a/css/hosting.css
+++ b/css/hosting.css
@@ -21,7 +21,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    gap: 30px
+    gap: 30px;
 }
 
 .hosting-cards_card {
@@ -97,7 +97,6 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
-
 }
 
 .popular-cards_card-img_wrapper {
@@ -149,7 +148,7 @@
 }
 
 .neutral-star {
-    color: var(--main-bg-color)
+    color: var(--main-bg-color);
 }
 
 @media (max-width: 1024px) {
@@ -202,5 +201,4 @@
     .hosting-plus {
         margin-top: 15px;
     }
-
 }
