--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,9 @@
 }
 
 :root {
-    --main-color: #0065FC;
-    --main-bg-color: #F2F2F2;
-    --filter-bg-color: #DEEBFF;
+    --main-color: #0065fc;
+    --main-bg-color: #f2f2f2;
+    --filter-bg-color: #deebff;
 }
 
 .fa-solid {
@@ -72,7 +72,8 @@ figure {
 
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
-@media (max-width: 1024px) {}
+@media (max-width: 1024px) {
+}
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
